[gd_scene load_steps=8 format=3 uid="uid://b4d7aau351dpp"]

[ext_resource type="Shader" path="res://scripts/shader_scripts/shuttle.gdshader" id="1_4t4d2"]
[ext_resource type="Theme" uid="uid://dr5g8csnucdrw" path="res://Interface/themes/blue_theme.tres" id="1_n46j8"]
[ext_resource type="Script" path="res://scripts/Interface_scripts/modal_quit.gd" id="2_8vxcn"]
[ext_resource type="Texture2D" uid="uid://dqx2hhiq78t0a" path="res://Interface/warning-band.png" id="3_616js"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynm6s"]
bg_color = Color(0, 0, 0, 0.827451)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6kyp"]
render_priority = 0
shader = ExtResource("1_4t4d2")
shader_parameter/direction_r = Vector2(0.5, 0)
shader_parameter/direction_g = Vector2(0.5, 0)
shader_parameter/direction_b = Vector2(0.5, 0)
shader_parameter/alpha_strength = 11.0
shader_parameter/smoke_color = Color(0.963362, 0.603391, 0, 0)
shader_parameter/noise_img = ExtResource("3_616js")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bgwn"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.312284, 0, 0.0302809, 1)

[node name="modal_Quit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_n46j8")
script = ExtResource("2_8vxcn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -81.0
offset_right = 173.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ynm6s")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Warning-band" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_f6kyp")
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Warning-band"]
layout_mode = 2
size_flags_horizontal = 8

[node name="cross-btn" type="Button" parent="PanelContainer/VBoxContainer/Warning-band/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = " X "

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 29.0
offset_right = 54.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 29
text = "Are you sure ?"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Control"]
layout_mode = 2
offset_left = 204.0
offset_top = 79.0
offset_right = 326.0
offset_bottom = 110.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="cancel-btn" type="Button" parent="PanelContainer/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="quit-btn" type="Button" parent="PanelContainer/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0bgwn")
text = " Quit "

[connection signal="button_down" from="PanelContainer/VBoxContainer/Warning-band/HBoxContainer/cross-btn" to="." method="_on_crossbtn_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Control/HBoxContainer/cancel-btn" to="." method="_on_cancelbtn_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Control/HBoxContainer/quit-btn" to="." method="_on_quitbtn_button_down"]
